--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ CLIENT_ID = 673405683879-uefonvtlq9kb818eqmm3usv1cd0q71o0.apps.googleusercontent
 CLIENT_SECRET = oQlkYRK_4kt9fshOuN9mjceo
 
 REFRESH_TOKEN = 1//04egYbJXOya4YCgYIARAAGAQSNwF-L9Ir9i7EJ_1HZ94eFWPzV2Ibyg3Lxa8ulTmLU7FF_L8iSwAKJqaPM8s4hGQq3vC0AxGA8Ao
+
+FRONTEND_URI=https://campus.softwarica.edu.np
